some updates on exercice 00
I did improve a bit on the parsing of the exercice00

--- a/cpp_module06/ex01/Makefile
+++ b/cpp_module06/ex01/Makefile
@@ -1,12 +1,12 @@
 cc		= c++
 
-SRC	=  ScalarConverter.cpp main.cpp 
+SRC	=  Serializer.cpp main.cpp 
 
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
 fileo	= $(SRC:.cpp=.o)
 
-Name	= ScalarConverter
+Name	= Serializer
 
 all : $(Name)
 
